--- a/blog-post-workflow.yml
+++ b/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "4"
-                feed_list: "https://dev.to/feed/moharamfatema"
+                feed_list: "https://medium.com/feed/@moharamfatema"
